<resources>
    <string name="app_name" translatable="false">Book Worm</string>

    <!-- Navigation Drawer Options -->
    <string name="drawer_search">Search Books</string>
    <string name="drawer_barcode">Scan Barcode</string>
    <string name="drawer_bestseller">Bestsellers</string>
    <string name="drawer_to_read">To Read</string>
    <string name="drawer_reading">Reading</string>
    <string name="drawer_finished">Finished</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>

    <!-- Toolbar Actions -->
    <string name="action_sort">Sort Books</string>
    <string name="action_sort_title">Sort by Title</string>
    <string name="action_sort_author">Sort by Author</string>
    <string name="action_twitter">Follow on Twitter</string>
    <string name="action_email">Send Feedback</string>
    <string name="action_email_using">Send email&#8230;</string>
    <string name="action_email_error">There are no email clients installed!</string>
    <string name="action_about">About</string>
    <string name="action_search">Search for books&#8230;</string>
    <string name="action_share">Share</string>
    <string name="action_share_subject">Check out %1$s</string>     <!-- Example: Check out Dune -->
    <string name="action_share_text">%1$s by %2$s\n%3$s</string>   <!-- Example: Dune by Frank Herbert \n http://.... -->
    <string name="action_share_title">Share book&#8230;</string>
    <string name="action_open">Open in Browser</string>

    <!-- Content Descriptions for ImageViews -->
    <string name="description_books">Books</string>
    <string name="description_app_icon">App Icon</string>
    <string name="description_book_cover">Book Cover</string>
    <string name="description_menu">Options</string>
    <string name="description_error_icon">Error Icon</string>
    <string name="description_no_results">No Results Icon</string>

    <!-- Loading and Error Message -->
    <string name="server_unreachable">Oops! Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again?</string>
    <string name="no_results">Oops! Dobby couldn\'t find any results&#8230;</string>

    <!-- Book Detail Page -->
    <string name="detail_message">Select a category from the list&#8230;</string>
    <string name="detail_subtitle_by">by %1$s</string>
    <string name="detail_subtitle_page">%1$s pages</string>
    <string name="detail_rating">%1$s ratings</string>
    <string name="detail_ranking">RANKING</string>
    <string name="detail_description">DESCRIPTION</string>
    <string name="detail_publication">PUBLICATION</string>
    <string name="detail_ranking_current">Current Rank : %1$s</string>
    <string name="detail_ranking_weeks">Weeks on List : %1$s</string>
    <string name="detail_publication_name">Publisher : %1$s</string>
    <string name="detail_publication_date">Published : %1$s</string>
    <string name="detail_publication_isbn">ISBN : %1$s</string>
    <string name="detail_fab_to_read">Want to Read</string>
    <string name="detail_fab_to_read_remove">Remove from \"To Read\"</string>
    <string name="detail_fab_reading">Currently Reading</string>
    <string name="detail_fab_reading_remove">Remove from \"Reading\"</string>
    <string name="detail_fab_finished">Mark as Finished</string>
    <string name="detail_fab_finished_remove">Remove from \"Finished\"</string>

    <!-- Settings Activity -->
    <string name="pref_title">Settings</string>
    <string name="pref_category_data">App Data</string>
    <string name="pref_key_backup" translatable="false">backup_data</string>
    <string name="pref_key_restore" translatable="false">restore_data</string>
    <string name="pref_title_backup">Backup Data</string>
    <string name="pref_title_restore">Restore Data</string>
    <string name="pref_summary_backup">Export data to storage</string>
    <string name="pref_summary_restore">Import data from storage</string>

    <!-- Backup/Restore Data -->
    <string name="backup_select">Select location&#8230;</string>
    <string name="backup_complete">Backup completed successfully</string>
    <string name="backup_failed">Error! Unable to save backup</string>
    <string name="restore_select">Select backup file&#8230;</string>
    <string name="restore_complete">Restore completed successfully</string>
    <string name="restore_failed">Error! Unable to restore backup</string>
    <string name="restore_invalid">The file you selected is invalid</string>

    <!-- About Dialog -->
    <string name="about_version">Version 1.2</string>
    <string name="about_made_by">Made By</string>
    <string name="about_name" translatable="false">Ronak Manglani</string>
    <string name="about_powered_by">Powered By</string>
    <string name="about_api">NY Times and Google Books</string>

    <!-- Other Strings -->
    <string name="list_placeholder_text">You haven\'t added any books\nto this list</string>
    <string name="camera_permission_denied">Unable to open camera</string>

</resources>