<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/action_sort"
        android:visible="false"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/action_twitter"
        android:title="@string/action_twitter"
        app:showAsAction="never" />

    <item android:id="@+id/action_email"
        android:title="@string/action_email"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />

</menu>