<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Error Icon -->
    <ImageView android:src="@drawable/server_unreachable"
        android:layout_width="@dimen/error_icon_width"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_error_icon"/>

    <!-- Unable to connect -->
    <com.ronakmanglani.booknerd.view.RobotoLightTextView
        android:text="@string/server_unreachable"
        android:textSize="@dimen/text_large"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/error_message_marginTop"/>

    <!-- Try again -->
    <com.ronakmanglani.booknerd.view.RobotoBoldTextView
        android:id="@+id/try_again"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:padding="@dimen/error_try_again_padding"
        android:text="@string/try_again"
        android:textSize="@dimen/text_xxlarge"
        android:textColor="@color/accent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"/>

</LinearLayout>